--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scrollbar-width: none; /* For Firefox */
+  }
+  
+  body {
+    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+  }
+  
+  html::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+  }
